Cleaned up everything, maybe the last version

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!-- an old test page -->
 <!doctype html>
 
 <html lang="en">
@@ -52,7 +52,7 @@ test0
 <script src="script.js"></script>
 <!-- script is checking both if div or entire page were scrolled -->
 
-
+<!-- may want to get rid of this iframe -->
 <iframe id="dsq-app1132" name="dsq-app1132" allowtransparency="true" frameborder="0" scrolling="no" tabindex="0" title="Disqus" width="100%" src="http://disqusads.com/ads-iframe/prebid/?aol=0&amp;experiment=prebid_lift&amp;an_version=1&amp;safetylevel=10&amp;lq=0&amp;serverbid=1&amp;thumbnails_allowed=0&amp;display_only=0&amp;forum_pk=2165179&amp;position=bottom&amp;forum_shortname=nmax&amp;appnexus=1&amp;category=news&amp;display_bidding_enabled=1&amp;stories_allowed=1&amp;service=dynamic&amp;display_allowed=1&amp;video_allowed=0&amp;provider=prebid&amp;adx=1&amp;t=1502139801&amp;rubicon=1&amp;sandbox_display=1&amp;links_allowed=1&amp;doublewide_allowed=1&amp;shortname=nmax&amp;variant=serverbid&amp;openx=0&amp;anchorColor=%23071b59&amp;colorScheme=light&amp;sourceUrl=http%3A%2F%2Fwww.newsmax.com%2FNewsfront%2FCNN-sale-AT-T-Time-Warner%2F2017%2F08%2F07%2Fid%2F806263%2F&amp;typeface=serif&amp;canonicalUrl=http%3A%2F%2Fwww.newsmax.com%2FNewsfront%2FCNN-sale-AT-T-Time-Warner%2F2017%2F08%2F07%2Fid%2F806263%2F&amp;disqus_version=7bad5fe" style="width: 1px !important; min-width: 100% !important; border: none !important; overflow: hidden !important; height: 310px !important;"></iframe>
 
 </div></body>
